--- a/custom/index.html
+++ b/custom/index.html
@@ -359,7 +359,7 @@
             var params = message.params;
 
             if (command == "login"){
-                wasAbi.login(params)
+                wasAbi.login(params);
                 //loginWithParams(params);
             }else{
                 var text = params.text
