--- a/custom/index.html
+++ b/custom/index.html
@@ -12,8 +12,9 @@
     <script type="text/javascript" src="WasABI.js"> </script>
     <script>
 
-        //const wasAbi = new WasABI();
-        const channel = 'urn:x-cast:com.optm.anhplayer';
+        const wasAbi = new WasABI();
+        //const channel = 'urn:x-cast:com.optm.anhplayer';
+        const channel = wasAbi.CHANNEL;
         const context = cast.framework.CastReceiverContext.getInstance();
         const playerManager = context.getPlayerManager();
         const licenseServerUrl = "https://ios.orangetv.orange.es/mob/api/rtv/v1/drm";
