Set default language

--- a/custom/index.html
+++ b/custom/index.html
@@ -9,7 +9,6 @@
     <cast-media-player style="width: 100%;" id="player"></cast-media-player>
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
-    <!--<script type="text/javascript" src="receiver.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
     <script type="text/javascript" src="WasABI.js"> </script>
     <script>
@@ -77,7 +76,9 @@
                 console.log("PLAYER_LOAD_COMPLETE: ");
                 playerManager.play();
 
-                setInterval(checkSubtitles, 5000);
+
+                audioTracksManager.setActiveByLanguage('es');
+
 
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
 
@@ -380,20 +381,6 @@
         context.start(options);
 
         console.log("context started")
-
-    
-        function checkSubtitles() {
-            console.log("checkSubtitles");
-            var cue = shaka.text.Cue;
-            console.log("checkSubtitles check is visible");
-            var direction = cue.direction;
-            //console.log("checkSubtitles isVisible: " + shaka.text.SimpleTextDisplayer.isTextVisible());
-            console.log("checkSubtitles direction " + direction);
-            shaka.text.Cue.backgroundColor = "#00FF00"
-            shaka.text.Cue.color = "#FFFFFF00"
-            shaka.text.Cue.size = 2000
-            console.log("checkSubtitles finish");
-        }
     
     </script>
 
