Add spa language

--- a/custom/index.html
+++ b/custom/index.html
@@ -77,7 +77,7 @@
                 playerManager.play();
 
 
-                audioTracksManager.setActiveByLanguage('es');
+                audioTracksManager.setActiveByLanguage('spa');
 
 
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
