--- a/custom/index.html
+++ b/custom/index.html
@@ -72,12 +72,12 @@
                     console.log("on PLAYER_LOAD_COMPLETE: tracks[" + i + "].type: " + event.media.tracks[i].type);
                 }
 
-
                 console.log("PLAYER_LOAD_COMPLETE: ");
+                playerManager.getTextTracksManager().setActiveByLanguage('es');
+
+                console.log("PLAYER_SET_DEFAULT_LANGUAGE: ");
                 playerManager.play();
 
-
-                audioTracksManager.setActiveByLanguage('spa');
 
 
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
