--- a/custom/index.html
+++ b/custom/index.html
@@ -73,7 +73,7 @@
                 }
 
                 console.log("PLAYER_LOAD_COMPLETE: ");
-                playerManager.getTextTracksManager().setActiveByLanguage('es');
+                playerManager.getTextTracksManager().setActiveByLanguage('spa');
 
                 console.log("PLAYER_SET_DEFAULT_LANGUAGE: ");
                 playerManager.play();
