--- a/custom/index.html
+++ b/custom/index.html
@@ -76,6 +76,7 @@
                 playerManager.play();
 
                 console.log("PLAYER_SET_DEFAULT_LANGUAGE: ");
+                playerManager.getAudioTracksManager().setActiveByLanguage('spa');
                 playerManager.getTextTracksManager().setActiveByLanguage('spa');
 
 
