Quit set languages

--- a/custom/index.html
+++ b/custom/index.html
@@ -86,8 +86,8 @@
                 }
 
 
-                playerManager.getAudioTracksManager().setActiveByLanguage(defaultAudio);
-                playerManager.getTextTracksManager().setActiveByLanguage(defaultSubtitles);
+                //playerManager.getAudioTracksManager().setActiveByLanguage(defaultAudio);
+                //playerManager.getTextTracksManager().setActiveByLanguage(defaultSubtitles);
 
 
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media))
