--- a/custom/index.html
+++ b/custom/index.html
@@ -10,7 +10,7 @@
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
-    <script type="text/javascript" src="WasABI.js"> </script>
+    <!--<script type="text/javascript" src="WasABI.js"> </script>-->
     <script>
 
         const channel = "urn:x-cast:com.optm.anhplayer";
