--- a/custom/index.html
+++ b/custom/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="WasABI.js"> </script>
     <script>
 
-        //const wasAbi = new WasABI();
+        const wasAbi = new WasABI();
         //const channel = wasAbi.getChannel();
         //const licenseServerUrl = wasAbi.getLicenseUrl();
         const channel = 'urn:x-cast:com.optm.anhplayer';
