--- a/custom/index.html
+++ b/custom/index.html
@@ -378,8 +378,8 @@
             switch (command) {
                 case "login":
                     wasAbi.login(params);
-                case "openSession":
-                    wasAbi.setSessionManagerId(params);
+                case "sessionParams":
+                    wasAbi.initSessionParams(params);
                     break;
                 case "defaultAudioAndSubtitles":
                     setDefaultAudioAndSubtitlesOptions(params);
