--- a/custom/index.html
+++ b/custom/index.html
@@ -63,6 +63,7 @@
 
                 console.log("PLAYER_LOAD_COMPLETE: ");
                 playerManager.play();
+                wasAbi.scheduleOpenSession()
 
 
 
@@ -136,6 +137,29 @@
             return request;
         });
 
+        playerManager.setMessageInterceptor(
+            cast.framework.messages.MessageType.CANCELLED,
+            request => {
+                console.log("----- CANCELLED -----");
+                wasAbi.closeSession()
+            return request;
+        });
+
+        playerManager.setMessageInterceptor(
+            cast.framework.messages.MessageType.INTERRUPTED,
+            request => {
+                console.log("----- INTERRUPTED -----");
+                wasAbi.closeSession()
+            return request;
+        });
+
+        playerManager.setMessageInterceptor(
+            cast.framework.messages.MessageType.FINISHED,
+            request => {
+                console.log("----- FINISHED -----");
+                wasAbi.closeSession()
+            return request;
+        });
 
 
         function sendMessageToSender(){
@@ -353,6 +377,7 @@
 
                 // stop the session
                 context.stop();
+                wasAbi.closeSession()
             }
         );
 
