--- a/custom/index.html
+++ b/custom/index.html
@@ -440,9 +440,8 @@
         }
 
         function scheduleOpenSession(){
-            setInterval( {
-                this.wasAbi.openSession();
-            }, 10000);
+            var fun = wasAbi.openSession
+            setInterval( fun, 10000);
             //if (this.contentType != this.trailerContentType){
             //this.sessionManagerTimer = setInterval( openSession(self), 10000);
             //}
