--- a/custom/index.html
+++ b/custom/index.html
@@ -440,7 +440,9 @@
         }
 
         function scheduleOpenSession(){
+            console.log("openSession schedule");
             var fun = wasAbi.openSession()
+            console.log("openSession schedule 2");
             setInterval(fun, 10000);
             //if (this.contentType != this.trailerContentType){
             //this.sessionManagerTimer = setInterval( openSession(self), 10000);
