Check start absolute time

--- a/custom/index.html
+++ b/custom/index.html
@@ -95,7 +95,7 @@
                 console.log("PLAYER_LOAD_COMPLETE: " + JSON.stringify(event.media));
 
 
-                if (event.media.startAbsoluteTime && event.media.startAbsoluteTime != 0){
+                if (event.media.startAbsoluteTime){
                     console.log("PLAYER_LOAD_COMPLETE startTime: " + event.media.startAbsoluteTime);
                     playerManager.seek(event.media.startAbsoluteTime);
                 }
